HTML, CSS and Python validation done

--- a/templates/addplatform.html
+++ b/templates/addplatform.html
@@ -8,14 +8,14 @@
       <div class="input-field col s12">
         <i class="material-icons prefix">videogame_asset</i>
         <input name = "platform_name" id="platform_name" type="text" class="validate">
-        <label for="game_name">Add your Platform</label>
+        <label for="platform_name">Add your Platform</label>
       </div>
     </div><!--Text Input Area-->
     <div class="row">
-      <button class="btn waves-effect waves-light center-button" type="submit" name="action" white>Add Platform
+      <button class="btn waves-effect waves-light center-button" type="submit" name="action" >Add Platform
         <i class="material-icons right">add</i>
       </button>
     </div><!--button-->
-  </form>
+  </form><!--Text input area and button for platform text entry-->
 </div><!--Form to add a gaming platform-->
 {% endblock %}
