--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -45,7 +45,7 @@
       </div>
     </div><!--platform select area-->
     <div class="row">
-      <div class="input-field col s12" id="multiplayer">
+      <div class="input-field col s12" id="multiplayer-list">
         <i class="fas fa-gamepad prefix"></i>
         <select id="multiplayer" name="multiplayer">
           <option value="" disabled selected>Select One</option>
@@ -82,10 +82,10 @@
       </div> 
     </div><!--game screenshot area-->
     <div class="row">
-      <button class="btn waves-effect waves-light center-button" type="submit" name="action" white>Add Review
+      <button class="btn waves-effect waves-light center-button" type="submit" name="action">Add Review
         <i class="material-icons right">add</i>
       </button>
     </div><!--Add Review button-->
-  </form>  
+  </form><!--Add Game Review Form-->  
 </div><!--form to add a game review-->
 {% endblock %}
