--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,8 +39,6 @@ footer {
      min-height: 100%;
  }/*Sets min height for everything in the body except the footer */
 
-
-
 /*all_games HTML*/
 .all-games-summary {
     background-color:black;
@@ -67,7 +65,6 @@ footer {
     padding: 5px;
 }
 
-
 .all-games-summary .name_and_rating {
     margin: 15px;
     padding: 10px;
@@ -79,8 +76,6 @@ footer {
     margin: 15px;
 } /*Border, padding and margin for ul elements li children*/
 
-
-
 .buttons {
     display: flex;
     width: 100%;
@@ -89,13 +84,11 @@ footer {
 
 .buttons i {
     line-height: 17px;
-    font-size: 
 }
 
 form label {
     clear: both;
 }
-
 
 /*Index.html*/
 .index {
@@ -104,39 +97,8 @@ form label {
   background-image: url("../img/indexbg.png");
   background-position: center center;
   background-size: cover;
- } background image and styling*/
+ } /*background image and styling*/
 
- .view_btn {
-     background-color: red;
-     text-align: center;
-     height: 300px;
-     width: 400px;
-     font-size: 40px;
-     margin-left: 25px;
-     margin-top: 300px;
-     padding: 5px;
-     float: left;
-     border-radius: 50%;
- }/*View button height,padding,margins and color*/
-
-  .add_btn {
-     background-color: red;
-     height: 300px;
-     width: 400px;
-     font-size: 40px;
-     margin-right: 25px;
-     margin-top: 300px;
-     padding: 5px;
-     float: right;
-     border-radius: 50%;
- }/*Add button height,padding,margins and color*/
-
- .view_btn i, .add_btn i {
-     font-size: 60px;
-     padding: 10px;
- }/*Size increase and padding for the button icons*/
- 
-/*Add/Edit Form Styling*/
  form {
      background-color:#696969;
      color: white;
@@ -151,12 +113,11 @@ form label {
      margin-left: 40%;
      margin-right: 40%;
      line-height: 24px;
-}/* font color,border,text aligning and button positioning for add review button*/
+}/* font color,border,text aligning and button positioning for buttons*/
 
 .center-button i {
     transform:translateY(-3px);
     margin-left: 0;
-    
 }
 
 .confirmation-button {
@@ -205,8 +166,6 @@ form label {
     text-align: center;
 } /*Buttons on games.html*/
 
-
-
 #mobile-demo li a {
     color: white;
 }
@@ -225,6 +184,7 @@ form label {
    
     text-align: center;
 }
+
 .game-page-image {
      width: 100%;
      height: 100%;
