--- a/templates/editreview.html
+++ b/templates/editreview.html
@@ -89,10 +89,11 @@
       </div>
     </div><!--description-->
     <div class="row">
-    <div class="input-field col s12">
-      <i class="material-icons prefix">add_photo_alternate</i>
-      <input name = "image" id="image" type="text" class="validate" value = "{{game.image}}" required>
-      <label for="image">Game Screenshot URL</label>
+      <div class="input-field col s12">
+        <i class="material-icons prefix">add_photo_alternate</i>
+        <input name = "image" id="image" type="text" class="validate" value = "{{game.image}}" required>
+        <label for="image">Game Screenshot URL</label>
+      </div>
     </div>
     <div class="row">
       <button class="btn waves-effect waves-light center-button" type="submit" name="action">Edit Review
