--- a/templates/all_games.html
+++ b/templates/all_games.html
@@ -8,16 +8,19 @@
       <li>
         <div class="all-games-summary">
           <div class="row">
-            <a href="{{url_for('show_review', game_id=game._id)}}" class="waves-effect waves-light btn game-btn">
-              <i class="material-icons">remove_red_eye</i>
-              <br>
-              View Full Review
-            </a><!--View Full Review Button-->
-            <div class="name_and_rating">
+            <div class="col s1">
+              <a href="{{url_for('show_review', game_id=game._id)}}" class="waves-effect waves-light btn game-btn">
+                <i class="material-icons">remove_red_eye</i>
+                <br>
+                View Full Review
+              </a><!--View Full Review Button-->
+            </div>
+            <div class="col s9">
               {{game.game_name}}<br> Rating: {{game.rating}}
             </div><!--Game Name & Rating-->
           </div>
-        </div><!--View game button and game name and rating section-->
+        </div>
+        <!--View game button and game name and rating section-->
       </li>
       {% endfor %}
     </ul>
