--- a/templates/all_games.html
+++ b/templates/all_games.html
@@ -8,12 +8,14 @@
       <li>
         <div class="all-games-summary">
           <div class="row">
+          <div class="col s12 m6">
             <a href="{{url_for('show_review', game_id=game._id)}}" class="waves-effect waves-light btn game-btn">
               <i class="material-icons">remove_red_eye</i>
               <br>
               View Full Review
             </a><!--View Full Review Button-->
-            <div class="name_and_rating">
+            </div>
+            <div class="name_and_rating col s12 m6">
             {{game.game_name}}<br> Rating: {{game.rating}}
             </div><!--Game Name & Rating-->
           </div>
