search form styled

--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -3,7 +3,7 @@
 <h1>Add a Game Review</h1>
 <h2>If you cant find your platform listed, you can add a new platform to our collection by clicking 'Add a Platform' in the Menu above</h2>
 <div class="row">
-  <form action = "{{url_for('review_added')}}" method = "POST" class="col s12">
+  <form action = "{{url_for('review_added')}}" method = "POST" class="col s12" id="review_form">
     <div class="row">   
       <div class="input-field col s12">
         <i class="material-icons prefix">videogame_asset</i>
