--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@
      padding: 10px;
      margin: 10px;
      line-height: 30px;
+     font
  }/*padding,margin an line height stylings for the navbar options*/
 
  .nav-wrapper .brand-logo {
@@ -19,6 +20,18 @@
      margin: 10px;
      line-height: 30px;
  }/*padding,margin an line height stylings for the navbar branding*/
+
+ .submit {
+     height: 40px;
+     background-color: white;
+     line-height: 30px;
+     display: inline-block;
+     width: 
+ }
+
+ .search{
+     display: inline-block;
+ }
 
  h1, h2 {
    padding-top: 10px;
@@ -41,7 +54,7 @@ footer {
 
 /*all_games HTML*/
 .all-games-summary {
-    background-color:black;
+    background-color: rgba(0, 0, 0, 0.7);
     height: 100%;
     width: 100%;
     color: white;
@@ -70,32 +83,40 @@ footer {
     display: inline-block;
 }/*Game title and Rating area-margins and letter spacing*/
 
-.buttons {
+.center-section {
     display: flex;
     width: 100%;
     justify-content: center;
-}
+} /*Centers the form confirmation pages
 
 
 
-form label {
-    clear: both;
-}
-
-/*Index.html*/
-.index {
-  height: 100%;
-  width: 100%;
-  background-image: url("../img/indexbg.png");
-  background-position: center center;
-  background-size: cover;
- } /*background image and styling*/
-
- form {
+/*Forms*/
+#review_form  {
      background-color:#696969;
      color: white;
      border-radius: 2%;
- }/*Form bg color, font color and border radius*/
+ }/*add/edit review form bg color, font color and border radius for the add and edit review forms*/
+
+#search_box {
+   text-align: center;
+   background-color: rgba(0, 0, 0, 0.7);
+   color: white;
+   border: 2px solid white;
+   border-radius: 25px;
+   margin-bottom: 25px;
+   margin-left: 40px;
+   margin-right: 40px;
+}
+#search_box input {
+    text-align: center;
+    border-bottom: none;
+}
+
+
+
+
+
 
 .center-button{
      color: white;
