--- a/templates/addconfirmation.html
+++ b/templates/addconfirmation.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row buttons">
+<div class="row center-section">
   <div class="col s12 ">
     <h2>Thank You for adding your review to our collection</h2>
     <h2>Have a look at the full list of reviews available by clicking the button below</h2>
