--- a/templates/all_games.html
+++ b/templates/all_games.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>All Game Reviews</h1>
-<div class="row">
-  <div class="col s12">
-  <form action = "{{url_for('search')}}" method = "GET" class="col s12">
-    <div class="row">   
-      <div class="input-field col s12">
-        <i class="material-icons prefix">videogame_asset</i>
-        <input name = "search" id="search" type="text" class="validate" required>
+
+<form action = "{{url_for('search')}}" method = "GET" id="search_box">
+<input type="text" name="search" id="search" placeholder="Search for Games">
+<button class="btn waves-effect waves-light center-button" type="submit" name="action">
+  <i class="fas fa-search"></i>
+</button>
+</form>
+
+ 
+  
     <ul>
       {% for game in games %}
       <li>
@@ -32,5 +35,5 @@
       {% endfor %}
     </ul>
   </div>
-</div>
+
 {% endblock %}
