--- a/templates/editreview.html
+++ b/templates/editreview.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>Edit Review</h1>
 <div class="row">
-  <form action = "{{url_for('update_review', game_id=game._id)}}" method = "POST" class="col s12">
+  <form action = "{{url_for('update_review', game_id=game._id)}}" method = "POST" class="col s12" id="review_form">
     <div class="row">   
       <div class="input-field col s12">
         <i class="material-icons prefix">videogame_asset</i>
