--- a/templates/addplatform.html
+++ b/templates/addplatform.html
@@ -3,7 +3,7 @@
 <h1>Add a Gaming Platform</h1>
 <h2>Cant find the right console to select? Add your console here</h2>
 <div class="row">
-  <form action = "{{url_for('insert_platform')}}" method = "POST" class="col s12">
+  <form action = "{{url_for('insert_platform')}}" method = "POST" class="col s12" id="review_form">
     <div class="row">   
       <div class="input-field col s12">
         <i class="material-icons prefix">videogame_asset</i>
