--- a/templates/addconfirmation.html
+++ b/templates/addconfirmation.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="row center-section">
-  <div class="col s12 ">
+  <div class="col s12">
     <h2>Thank You for adding your review to our collection</h2>
     <h2>Have a look at the full list of reviews available by clicking the button below</h2>
-    <a href="{{url_for('all_games')}}" class="waves-effect waves-light btn confirmation-button">
+    <a href="{{url_for('all_games')}}" class="waves-effect waves-light btn center-button">
       View Reviews
     </a><!--View all reviews button-->  
   </div> 
