--- a/templates/game_page.html
+++ b/templates/game_page.html
@@ -46,13 +46,11 @@
     </div>
   </div><!--Game Description Area-->
   <div class="row">
-    <div class="buttons">
+    <div class="center-section">
       <a href="{{url_for('edit_review', game_id=game._id)}}" class="waves-effect waves-light btn game-btn">
-        <i class="material-icons">edit</i>
         Edit 
       </a><!--Edit Review Button-->  
       <a href="{{url_for('delete_review', game_id=game._id)}}" class="waves-effect waves-light btn game-btn ">
-        <i class="material-icons">delete</i>
         Delete 
       </a><!--Delete Review Button--> 
     </div>
