--- a/templates/edit_review_confirmation.html
+++ b/templates/edit_review_confirmation.html
@@ -4,8 +4,7 @@
   <div class="col s12 ">
     <h2>Thank You for your edit to this game review</h2>
     <h2>You can return to the review and see your changes by clicking the button below</h2>
-    <a href="{{url_for('show_review', game_id=game._id)}}" class="waves-effect waves-light btn confirmation-button">
-      <i class="material-icons">remove_red_eye</i>
+    <a href="{{url_for('show_review', game_id=game._id)}}" class="waves-effect waves-light btn center-button">
       Return to Review
     </a><!--Button to allow user to return to games review page-->
   </div> 
