--- a/templates/newplatform.html
+++ b/templates/newplatform.html
@@ -1,11 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="row buttons">
+<div class="row center-section">
   <div class="col s12">
     <h2>Thank You for adding the platform to our collection</h2>
     <h2>Click the button below to return to all game reviews</h2>
-     <a href="{{url_for('all_games')}}" class="waves-effect waves-light btn confirmation-button">
-       <i class="material-icons">games</i>
+     <a href="{{url_for('all_games')}}" class="waves-effect waves-light btn center-button">
        View Reviews
      </a><!--View Reviews Button-->  
   </div> 
