search.html indented and search field added to it

--- a/templates/addplatform.html
+++ b/templates/addplatform.html
@@ -12,7 +12,8 @@
       </div>
     </div><!--Text Input Area-->
     <div class="row">
-      <button class="btn waves-effect waves-light center-button" type="submit" name="action" >Add Platform
+      <button class="btn waves-effect waves-light center-button" type="submit" name="action" >
+        Add Platform
       </button>
     </div><!--button-->
   </form><!--Text input area and button for platform text entry-->
