--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -82,8 +82,8 @@
       </div> 
     </div><!--game screenshot area-->
     <div class="row">
-      <button class="btn waves-effect waves-light center-button" type="submit" name="action">Add Review
-        <i class="material-icons right">add</i>
+      <button class="btn waves-effect waves-light center-button" type="submit" name="action">
+        Add Review
       </button>
     </div><!--Add Review button-->
   </form><!--Add Game Review Form-->  
