--- a/templates/editreview.html
+++ b/templates/editreview.html
@@ -96,7 +96,8 @@
       </div>
     </div>
     <div class="row">
-      <button class="btn waves-effect waves-light center-button" type="submit" name="action">Edit Review
+      <button class="btn waves-effect waves-light center-button" type="submit" name="action">
+        Edit Review
       </button>
     </div><!--button-->
   </form>
