--- a/templates/all_games.html
+++ b/templates/all_games.html
@@ -1,39 +1,30 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>All Game Reviews</h1>
-
 <form action = "{{url_for('search')}}" method = "GET" id="search_box">
-<input type="text" name="search" id="search" placeholder="Search for Games">
-<button class="btn waves-effect waves-light center-button" type="submit" name="action">
-  <i class="fas fa-search"></i>
-</button>
+  <input type="text" name="search" id="search" placeholder="Search for Games">
+  <button class="btn waves-effect waves-light center-button" type="submit" name="action">
+    <i class="fas fa-search"></i>
+  </button>
 </form>
-
- 
-  
-    <ul>
-      {% for game in games %}
-      <li>
-     
-        <div class="all-games-summary">
-          <div class="row">
-          <div class="col s12 m6">
-            <a href="{{url_for('show_review', game_id=game._id)}}" class="waves-effect waves-light btn game-btn">
-              <i class="material-icons">remove_red_eye</i>
-              <br>
-              View Full Review
-            </a><!--View Full Review Button-->
-            </div>
-            <div class="name_and_rating col s12 m6">
-            {{game.game_name}}<br> Rating: {{game.rating}}
-            </div><!--Game Name & Rating-->
-          </div>
+<ul>
+  {% for game in games %}
+  <li>
+    <div class="all-games-summary">
+      <div class="row">
+        <div class="col s12 m6">
+          <a href="{{url_for('show_review', game_id=game._id)}}" class="waves-effect waves-light btn game-btn">
+            <i class="material-icons">remove_red_eye</i>
+            <br>
+            View Full Review
+          </a><!--View Full Review Button-->
         </div>
-      
-        <!--View game button and game name and rating section-->
-      </li>
-      {% endfor %}
-    </ul>
-  </div>
-
+        <div class="name_and_rating col s12 m6">
+          {{game.game_name}}<br> Rating: {{game.rating}}
+        </div><!--Game Name & Rating-->
+      </div>
+    </div><!--View game button and game name and rating section-->
+  </li>
+  {% endfor %}
+</ul>
 {% endblock %}
