--- a/templates/search.html
+++ b/templates/search.html
@@ -1,30 +1,28 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>All Game Reviews</h1>
-<div class="row">
-  <div class="col s12">
-    <ul>
-
-      <li>
-        <div class="all-games-summary">
-          <div class="row">
-            <div class="center_icon_and_text">
-              <a href={{url_for('show_review', game_id=game._id)}} class="waves-effect waves-light btn game-btn">
-                <i class="material-icons">remove_red_eye</i>
-                <br>
-                View Full Review
-              </a>
-            </div>
-            <div class="name_and_rating">
-              {{game.game_name}}<br> Rating: {{game.rating}}
-            </div><!--Game Name & Rating-->
-          </div>
-        </div>
-      </li>
-
-    </ul>
+<h1>Search Matches</h1>
+<form action = "{{url_for('search')}}" method = "GET" id="search_box">
+  <input type="text" name="search" id="search" placeholder="Search for Games">
+  <button class="btn waves-effect waves-light center-button" type="submit" name="action">
+    <i class="fas fa-search"></i>
+  </button>
+</form>
+<ul>
+  <li>
+  <div class="all-games-summary">
+    <div class="row">
+      <div class="center_icon_and_text">
+        <a href={{url_for('show_review', game_id=game._id)}} class="waves-effect waves-light btn game-btn">
+          <i class="material-icons">remove_red_eye</i>
+          <br>
+          View Full Review
+        </a>
+      </div>
+      <div class="name_and_rating">
+        {{game.game_name}}<br> Rating: {{game.rating}}
+      </div><!--Game Name & Rating-->
+    </div>
   </div>
-  </div>
-
-
+  </li>
+</ul>
 {% endblock %}
