--- a/templates/search.html
+++ b/templates/search.html
@@ -9,20 +9,20 @@
 </form>
 <ul>
   <li>
-  <div class="all-games-summary">
-    <div class="row">
-      <div class="center_icon_and_text">
-        <a href={{url_for('show_review', game_id=game._id)}} class="waves-effect waves-light btn game-btn">
-          <i class="material-icons">remove_red_eye</i>
-          <br>
-          View Full Review
-        </a>
+    <div class="all-games-summary">
+      <div class="row">
+        <div class="col s12 m6">
+          <a href="{{url_for('show_review', game_id=game._id)}}" class="waves-effect waves-light btn game-btn">
+            <i class="material-icons">remove_red_eye</i>
+            <br>
+            View Full Review
+          </a><!--View Full Review Button-->
+        </div>
+        <div class="name_and_rating col s12 m6">
+          {{game.game_name}}<br> Rating: {{game.rating}}
+        </div><!--Game Name & Rating-->
       </div>
-      <div class="name_and_rating">
-        {{game.game_name}}<br> Rating: {{game.rating}}
-      </div><!--Game Name & Rating-->
-    </div>
-  </div>
+    </div><!--View game button and game name and rating section-->
   </li>
 </ul>
 {% endblock %}
