--- a/templates/top_rated.html
+++ b/templates/top_rated.html
@@ -1,30 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Top Rated Games</h1>
-<div class="row">
-  <div class="col s12">
-    <ul>
-      {% for game in games %}
-      <li>
-        <div class="all-games-summary">
-          <div class="row">
-            <div class="center_icon_and_text">
-              <a href="{{url_for('show_review', game_id=game._id)}}" class="waves-effect waves-light btn game-btn">
-                <i class="material-icons">remove_red_eye</i>
-                <br>
-                View Full Review
-              </a>
-            </div><!--See Full Review Button-->
-            <div class="name_and_rating">
-              {{game.game_name}}
-              <br> 
-              Rating: {{game.rating}}
-            </div><!--Game Name & Rating-->
-          </div><!--See full review button and game name with rating-->
+<ul>
+  {% for game in games %}
+  <li>
+    <div class="all-games-summary">
+      <div class="row">
+        <div class="col s12 m6">
+          <a href="{{url_for('show_review', game_id=game._id)}}" class="waves-effect waves-light btn game-btn">
+            <i class="material-icons">remove_red_eye</i>
+            <br>
+            View Full Review
+          </a><!--View Full Review Button-->
         </div>
-      </li>
-      {% endfor %}
-    </ul>
-  </div>
-</div>
+        <div class="name_and_rating col s12 m6">
+          {{game.game_name}}<br> Rating: {{game.rating}}
+        </div><!--Game Name & Rating-->
+      </div>
+    </div><!--View game button and game name and rating section-->
+  </li>
+  {% endfor %}
+</ul>
 {% endblock %}
