Font Awesome Icons used instead of button text

--- a/templates/addreview.html
+++ b/templates/addreview.html
@@ -83,7 +83,7 @@
     </div><!--game screenshot area-->
     <div class="row">
       <button class="btn waves-effect waves-light center-button" type="submit" name="action">
-        Add Review
+        <i class="fas fa-plus"></i>
       </button>
     </div><!--Add Review button-->
   </form><!--Add Game Review Form-->  
