--- a/templates/edit_review_confirmation.html
+++ b/templates/edit_review_confirmation.html
@@ -5,7 +5,7 @@
     <h1>Thank You for your edit to this game review</h1>
     <h2>You can return to the review and see your changes by clicking the button below</h2>
     <a href="{{url_for('show_review', game_id=game._id)}}" class="waves-effect waves-light btn center-button">
-      Return to Review
+      <i class="far fa-eye"></i>
     </a><!--Button to allow user to return to games review page-->
   </div> 
 </div>
