--- a/templates/editreview.html
+++ b/templates/editreview.html
@@ -97,7 +97,7 @@
     </div>
     <div class="row">
       <button class="btn waves-effect waves-light center-button" type="submit" name="action">
-        Edit Review
+        <i class="fas fa-pen"></i>
       </button>
     </div><!--button-->
   </form>
