--- a/templates/addconfirmation.html
+++ b/templates/addconfirmation.html
@@ -5,7 +5,8 @@
     <h1>Thank You for adding your review to our collection</h1>
     <h2>Have a look at the full list of reviews available by clicking the button below</h2>
     <a href="{{url_for('all_games')}}" class="waves-effect waves-light btn center-button">
-      View Reviews
+    <i class="far fa-eye"></i>
+    <span class="hidden-sm hidden-xs">View</span>
     </a><!--View all reviews button-->  
   </div> 
 </div>
