--- a/templates/addplatform.html
+++ b/templates/addplatform.html
@@ -13,7 +13,7 @@
     </div><!--Text Input Area-->
     <div class="row">
       <button class="btn waves-effect waves-light center-button" type="submit" name="action" >
-        Add Platform
+        <i class="fas fa-plus"></i>
       </button>
     </div><!--button-->
   </form><!--Text input area and button for platform text entry-->
