--- a/templates/newplatform.html
+++ b/templates/newplatform.html
@@ -5,7 +5,7 @@
     <h1>Thank You for adding the platform to our collection</h1>
     <h2>Click the button below to return to all game reviews</h2>
      <a href="{{url_for('all_games')}}" class="waves-effect waves-light btn center-button">
-       View Reviews
+       <i class="fas fa-reply"></i>
      </a><!--View Reviews Button-->  
   </div> 
 </div>
