--- a/templates/all_games.html
+++ b/templates/all_games.html
@@ -12,14 +12,14 @@
   <li>
     <div class="all-games-summary">
       <div class="row">
-        <div class="col s2">
+  
           <a href="{{url_for('show_review', game_id=game._id)}}" class="waves-effect waves-light btn game-btn">
             <i class="material-icons">remove_red_eye</i>
             <br>
             View Full Review
           </a><!--View Full Review Button-->
-        </div>
-        <div class="name_and_rating col s10 ">
+       
+        <div class="name_and_rating">
           {{game.game_name}}<br> Rating: {{game.rating}}
         </div><!--Game Name & Rating-->
       </div>
